added mission statement fixed some styling

--- a/index.html
+++ b/index.html
@@ -41,19 +41,27 @@
             </div>
         </header>
         <div id="body" style="width: 100%; border: 0px; margin: 0px; display: flex;">
-            <div id="comingSoonCatImg" style="background-image: linear-gradient(rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.37) 100%), url(./media/img/homepagecat.webp); background-repeat: no-repeat; background-position: center; background-size: cover; width: 100%; height: 0px; padding: 40vh 0 40vh 0; margin: 0px;
+            <div id="comingSoonCatImg" style="background-image: linear-gradient(rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.37) 100%), url(./media/img/homepagecat.webp); background-repeat: no-repeat; background-position: center; background-size: cover; width: 100%; height: 40vh; padding: 40vh 0 0 0; margin: 0px;
             " >
-            <div id="catimgtext" >
-                Tim Traps Cats
-            </div>
+                <div id="catimgtext" >
+                    Tim Traps Cats
+                </div>
                 <hr style="width: 70vw; color: white; border: 1px solid white">
+                
             </div>
         </div>
-        <div id="footer" style="margin-top: 2em; color: #3338;">
+        <div style="width: 100%;" >
+            <h1 id="missionstatementheader" >Our Mission Statement:</h1>
+            <hr style="border-style: solid; border-width: .1em; border-color: black; width: 60%;" />
+            <p id="missionstatementtext">
+                Tim Traps Cats will be a TNR (trap, neuter, release) nonprofit organization that aims to improve the health and number of homeless cats in the Springfield, Missouri area. By trapping, sterilizing, and returning community cats to their outdoor homes, we will work with individuals and rescues in the community, lower the number of homeless kittens born in our area, and reduce the stress on local rescue resources.
+            </p>
+        </div>
+        <div id="footer" >
             <hr style="width: 80vw; border: 1px solid #8888;">
             <div style="display: flex; justify-content: space-around;">
-                <div style="font-family: sans-serif;">Copyright © 2021 Tim Traps Cats - All Rights Reserved.</div>
-                <div style="font-family: sans-serif;">built by <a href="zodywoolsey.github.io">chairdev</a></div>
+                <div id="footercopyright" >Copyright © 2021 Tim Traps Cats - All Rights Reserved.</div>
+                <div id="footerdev" >built by <a href="zodywoolsey.github.io">chairdev</a></div>
             </div>
         </div>
     </body>
