--- a/reportacat.html
+++ b/reportacat.html
@@ -43,11 +43,11 @@
             <script type="text/javascript" src="https://form.jotform.com/jsform/211494468870162"></script>
         </div>
         </div>
-        <div id="footer" style="margin-top: 2em; color: #3338;">
+        <div id="footer" >
             <hr style="width: 80vw; border: 1px solid #8888;">
             <div style="display: flex; justify-content: space-around;">
-                <div style="font-family: sans-serif;">Copyright © 2021 Tim Traps Cats - All Rights Reserved.</div>
-                <div style="font-family: sans-serif;">built by <a href="zodywoolsey.github.io">chairdev</a></div>
+                <div id="footercopyright" >Copyright © 2021 Tim Traps Cats - All Rights Reserved.</div>
+                <div id="footerdev" >built by <a href="zodywoolsey.github.io">chairdev</a></div>
             </div>
         </div>
     </body>
