--- a/reportacat.html
+++ b/reportacat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="description" content="tim traps cats: cat rescue for springfield mo">
+        <meta name="description" content="Tim Traps Cats: Cat Rescue for Springfield, MO">
         <meta name="keywords" content="springfield, trapping, stray, cats, cat, rescue, people, service, volunteer, tim, traps, tinytim">
         <meta name="author" content="chairdev">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
