--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                     </li>
                     <li class="headerulverticallines"></li>
                     <li>
+                        <a href="/outreach">Outreach</a>
+                    </li>
+                    <li class="headerulverticallines"></li>
+                    <li>
                         <a href="/volunteerform">Volunteering</a>
                     </li>
                     <li class="headerulverticallines"></li>
