--- a/wantbarncats.html
+++ b/wantbarncats.html
@@ -29,6 +29,10 @@
                     </li>
                     <li class="headerulverticallines"></li>
                     <li>
+                        <a href="/outreach">Outreach</a>
+                    </li>
+                    <li class="headerulverticallines"></li>
+                    <li>
                         <a href="/volunteerform">Volunteering</a>
                     </li>
                     <li class="headerulverticallines"></li>
